@@ -1,10 +1,4 @@
-DIST epson-inkjet-printer-escpr2-1.1.38-1lsb3.2.i486.rpm 3020541 BLAKE2B 460c3f2b8a16422e88df2cc41df5fdd9ff32335034935fc15e6b372d971a18994c01906c92b6adcff5acd6972550744c2fd0327b4a196b9a210495f570ab309d SHA512 49ac4778e815f335725bd007603efa8c379bb090176e24c51d3851f217560aeb6a12eac8b917e9fc0b52d8d31e5d2a50fdcc43be758783cd4fd4d390b58dbe28
-DIST epson-inkjet-printer-escpr2-1.1.38-1lsb3.2.x86_64.rpm 3020113 BLAKE2B af6e9fc7dd01353cc7620510c92d3c18a62215e34dcdfd6f6f82030994d6b5aeba3b240d1fd0f07bec0e9c64445cd7a5f5a088564209b3b410b2d56b6ea27d45 SHA512 4af8bd5eceab68fe3869962b52b26def273c4b60c0157598d45404fe5a0a009439341fedaccad6b072c084228cbf146f66e0c5c03decb00e780ac13dcb94e63c
-DIST epson-inkjet-printer-escpr2-1.1.39-1lsb3.2.i486.rpm 3000488 BLAKE2B 3f82bd807807dd4521958306c73fe5d9bd63495500790208e42e1c3231e277888b4109d89b6a29705eb75dddc8daa388410d0d2c54e7a3d6a2749e1207624d1b SHA512 ff1e46108237bd61ba3df4f825af1ecb1e59be7be521850af8330a80394645c64b48b9dd30d16e6226bab9cc5a29dab939eebc9c0b921d21e9cffb640ca9fc41
-DIST epson-inkjet-printer-escpr2-1.1.39-1lsb3.2.x86_64.rpm 3000153 BLAKE2B bd77d265d798d227b6b02707a6767eb4d13139da51a6a32bdd649037bdcda7d48e1e2d5d11946f8645c0bb0773fd10e6cb45a1580631e777b4820d2235d5a168 SHA512 e822f0e6c70f5e5d641bed7bf61b52eadaa9444574494849ff584539bdb89dd218adc826ca1b733209176c93c3ac160212789937e2cbdeb6df511caa34223960
 DIST epson-inkjet-printer-escpr2-1.1.41-1lsb3.2.i486.rpm 3053704 BLAKE2B 1a3c45f520b18a65c4998d1d3a0786a09047dd50fd8f485c5cc721deba1f2fad375e3f4c629f478ad633b36d7f416920ce899f15b22fd44f1d52a61005d6169d SHA512 6919ae54421a139096617842fb6f81e20ab102aadbc0c60a9f548719b10758de2223779cc8cae21f17b45912ea0bea3218bbd3330c7733bcb4ccd37eb20844aa
 DIST epson-inkjet-printer-escpr2-1.1.41-1lsb3.2.x86_64.rpm 3053166 BLAKE2B e7a8f087f2388808a81e429a03a95991122135e47ea27b31a8a9ded2877cf1f737ccf68c34055945cee9e23da9621d72c98461e3c9c0ef085f1f842691a3cfef SHA512 5b8dda031e3580965820b5b4cc1c6ba78d2958ec2269b2c08e6a3d13c92da7f19c4cb3d0e2144a1c2c02175a18e283c4a5d4dc1f0572aa3756f755459aac686e
-EBUILD epson-inkjet-printer-escpr2-bin-1.1.38.ebuild 1670 BLAKE2B 6c1d8a0cefff69e0401ad43bc131d508c699066445b2fe21b39b2629afc5b0533beefaf490605d2873d7d0e7b22cd82a7d484ec1fffa4ea39800db1c44ea945f SHA512 aed6b35327734af829ab317a7111c34bd75d354a17939b26f7ee632e0f752b3f6781cdc3ed4690bcfe8739b90e5435e7b6ac7b7d1771ec41c25a84ffff105b58
-EBUILD epson-inkjet-printer-escpr2-bin-1.1.39.ebuild 1670 BLAKE2B b98f2e2d034e4990ade5a428311e6b3af91998d73cb87ac3c5c94b4f847c7cd943b96f37bb0a3d3bc8c674305fdd05a0b8980c4edb08da7053c2157b44a611ff SHA512 ab16f45476eaa88ebac46558379441189dfa2b8590c0e0bcd5fe8cccc72a5a689964dffdeb37f4391b0cd74e48c4632d358ef0857788c4008f622a9cfc8aeed7
-EBUILD epson-inkjet-printer-escpr2-bin-1.1.41.ebuild 1670 BLAKE2B 9e2f1280f8c1bc3b92be598ed76011dcc457b546b94a961eb4f7c22ec71ee88ae982d4df8678fd2664b87ddc293ef3692edf5cac65a5f61803ce0c90c1e513f8 SHA512 cfdf2323fbd6fd0f7d7eafef2abfbf32bf96428fad8dacc4f9674e398e8188bf57a8ff9e5016e9a3ee2e431b394511a3183acf8f71b28ab33d45414e8ff680c8
-MISC metadata.xml 754 BLAKE2B 8c7bf6fb2c07b1340ad2a2777faeefabaa07cc7d4637029265eccaf4613695772267da3a2a729f3a05fef7228f1c54840de30fb9914a996765637d505dfa776e SHA512 e6905e32c6a4e8cbe2e5e9a609c77176ccd4669fd08c4f2cb6eb9f272c10a68dc6355703f605d8229787e9b939790f562493661eeba78c48b707b203f55e256e
+DIST epson-inkjet-printer-escpr2-1.1.42-1lsb3.2.i486.rpm 3070432 BLAKE2B e0749201a64b0602ced1a6aa895a6d4d042c9dd93ea2f12ee3d74ebe41f776d6940ec51d35bf78e271eeb1514a0de832154f37d87a78dc8b3afc3fa325c159be SHA512 d08d2148a9199e345e1986d59a33070c2a8ea85de7dcb71c05a809740793744b91af56203f5815a9adcf1a7763887afb203c0190d49ecaa4316c398d82776c91
+DIST epson-inkjet-printer-escpr2-1.1.42-1lsb3.2.x86_64.rpm 3069894 BLAKE2B e4dc39a548c2c97e9b13a542600c14f41257d850685c732dbc61797049d5e577e23127243e20750e4957610f86809546e2bdb267e8c4939334b8413217ae47eb SHA512 f08c6a45117c12cad1860cef707c6b53416ca21ddc3e180a10459ac5d344e3467d3a9340b61966670f0c3d1e038751a9e492891bc061078dbfcd453fe78a60a0
