@@ -1,8 +1,2 @@
-AUX bug_x86_64.patch 2428 BLAKE2B 2a6b8f6b9cba9694a5ff1909f5454ab6c3a3e19ef7706aa3f245991c2945b1ffe2f2a792fa85d14e2dd8cd5181eca9eed1b171c891f14c84d04b88cdfb8c097f SHA512 55cafa67de12daa9730e2aca3887b049dd52dd093e9f1609ea656165a67cd30bc1fc2b043c675f778a52e9e3fddce751f1b3533e31b7e6fbbbeede1cc25726ac
-DIST epson-inkjet-printer-escpr2-1.1.38.tar.gz 4256462 BLAKE2B 9db882bf58875a9e5a19422944188bbc7788db93360e9aefcc2ea4b8b3c40cbfdacea3f650289d9bd720287383af10cde86b18f16620e34e5ede3ad120437ce4 SHA512 b071461ca724f6d18f673a4d3da1760c702a915045863ca7a9a1444a3e705dbb4b07dc7ffd8de1fc8925b8abe3e8bd12ce9b8ee85376f9cc9055e72127df5326
-DIST epson-inkjet-printer-escpr2-1.1.39.tar.gz 4272989 BLAKE2B beca00ae5bd88ad444a8a10da482ab15d6e49198b1d932fd5efb4b2b9c1e864e564bb4baabc02eefc201baea1d962f40851c919770bea538ea9fb1b2b7b3cfcb SHA512 6e8cfe16c445dac090440385537f673a6c050d75d8086dfa7df6dfbf2e401103949b432161d5ebdcfb225ad748dad37905999ebec01c49f797a6225f8c579eed
 DIST epson-inkjet-printer-escpr2-1.1.41.tar.gz 4326859 BLAKE2B 8ae31c2bfd1288a4327a0c84785aef36522559b607eb77516cd834f5c4b6e02333df272b98a2c99c1bfcf2c26f5364437b046fc0cf0445a90476e289f4887755 SHA512 23b75092fbc2292e1bf0151aa5dbb2a794f335111cf4a5e4a2f7a19759275919e37c38a9c9cbd41dab764390de65eb5d8d8baaa86b351685e67093afc8cd80fd
-EBUILD epson-inkjet-printer-escpr2-1.1.38.ebuild 1319 BLAKE2B 983b7d5be967018e9310e19ae7e2619e36c363ecf7720ecdd05bd1157e359a7a8ddeb5d169f7477e7cb8293910543f6d6a85be4d5ebeaf1d08b51473f44ec51d SHA512 2503055daeb75ff103cd8ae47e65cbf31f683d825cdc402f8981036113d6bf19c103f5913521be9d41197a5317f3666ead1448470303d69a1217ad77840b75bc
-EBUILD epson-inkjet-printer-escpr2-1.1.39.ebuild 1319 BLAKE2B 01cce5fe8363546fd70e63eca67cf1d39466bd798716e2f4224a2b54c28e77744e86adf0d169684b1b6447a860bc172dfcdebb9434817007883740ef301a0a9c SHA512 7f3ae3c0f20bce618cc3b6151eaeebfcfe9450951616e79a4ce044d4befb1319be942dc503aad7c8bb8c20fbf6c44c4ed2067aaf8818c9303d58eef16d862963
-EBUILD epson-inkjet-printer-escpr2-1.1.41.ebuild 1319 BLAKE2B ab7e360931ce2a23de13c52c5c5e20f1283ca0b45f673d23c317cd300df62462bbbf923857ebfc2df6d002774015eeb193f6af2ba575530f026f0e7e505a96bf SHA512 0e321b71c0f011d24df7f1bd09bea2f34b7054bad0c20977152ba759ece9ea7a07a35ac3e1b3a2b506f041be5afb81c97b5c35825024366ba6ad53a71a672647
-MISC metadata.xml 767 BLAKE2B f926930802184524574c0cc524e8a4e519c343041491770cd1ec74c356d2657c3c566948081a816c9e4d2924b4ad5162023336de0b1fe1ed7199106ed1f5dc86 SHA512 5e1183fe70cdf9cd2dac426a594750ee9733e4cbe9caac68ed028539589653bb6c10083397d234c53dbd1875520be1b2edc4078a117891b040975acd7fa840ac
+DIST epson-inkjet-printer-escpr2-1.1.42.tar.gz 4367304 BLAKE2B 71921bfcb10789e1244bb698e436d17da310e9c55897c65f97a13b3364628de41cc68a55afedd6b007dbe3cac52002890102086d4ed58e50d76877d3e69d2d35 SHA512 8476589a653837c4b125b064ba417b29747d73ec4868aa2dc33c0986bd1743570698b4d5cd8f2bb6f9c488737cf61992f54c42f269fd2b949f1edb190cc96af4
